<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".detailuser.UserDetailActivity">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:background="#154c79"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/name_user"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/tv_avatar"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/username_detail"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_avatar" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/location"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_username" />

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/company"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_baseline_work_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_location" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="320dp"
            android:layout_height="90dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            app:cardElevation="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_company">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">

                <FrameLayout
                    android:layout_width="106dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="ObsoleteLayoutParam">


                    <TextView
                        android:id="@+id/tv_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="16dp"
                        android:gravity="center"
                        android:text="@string/followings_detail"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="6dp"
                        android:gravity="center"
                        android:text="@string/followings"
                        android:textSize="14sp" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="106dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="106dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="ObsoleteLayoutParam">

                    <TextView
                        android:id="@+id/tv_followings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="16dp"
                        android:gravity="center"
                        android:text="@string/followers_detail"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="6dp"
                        android:gravity="center"
                        android:text="@string/followers"
                        android:textSize="14sp" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="106dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="212dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="ObsoleteLayoutParam">

                    <TextView
                        android:id="@+id/tv_repository"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="16dp"
                        android:gravity="center"
                        android:text="@string/repository_detail"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="6dp"
                        android:gravity="center"
                        android:text="@string/repository"
                        android:textSize="14sp" />
                </FrameLayout>
            </FrameLayout>
        </androidx.cardview.widget.CardView>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout" />

        <ToggleButton
            android:id="@+id/toggle_fav"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/favorite_toggle"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textOff=""
            android:textOn=""
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>